--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -127,7 +127,7 @@
     margin-top: 25px;
   }
   .modal__description {
-    margin-bottom: 45px;
+    margin-bottom: 5px;
   }
   .modal__button {
     height: 46px;
