--- a/blocks/newItemModal.css
+++ b/blocks/newItemModal.css
@@ -129,7 +129,7 @@
     padding-bottom: 9px;
   }
   .new-item-modal__image-link {
-    margin-bottom: 46px;
+    margin-bottom: 5px;
     padding-bottom: 9px;
   }
   .new-item-modal__button {
